<resources>
    <string name="app_name">PSDM</string>
    <string name="details">Details: </string>
    <string name="type">Type: </string>
    <string name="typeOfWaste">Type of Waste: </string>
    <string name="storeName">Store Name: </string>
    <string name="id">ID: </string>
    <string name="volume">Volume: </string>
    <string name="emptyTheBin">Empty The Bin</string>
    <string name="trashState">Trash State</string>
    <string name="selectStore">Select Store</string>
    <string name="negozio1">Negozio 1</string>
    <string name="negozio2">Negozio 2</string>
    <string name="negozio3">Negozio 3</string>
</resources>
