<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.simone.psdm.activities.TrashDetailActivity">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <LinearLayout
            android:id="@+id/typeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/details"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <EditText
                android:id="@+id/trashType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typeOfWasteLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/typeLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/typeOfWasteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeOfWaste" />

            <EditText
                android:id="@+id/trashTypeOfWaste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.42"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/storeNameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/typeOfWasteLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/storeNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storeName" />

            <EditText
                android:id="@+id/trashStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/storeNameLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <EditText
                android:id="@+id/trashId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/volumeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/idLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/volumeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume" />

            <EditText
                android:id="@+id/trashVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/volumeLinearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:elevation="0dp"
            android:text="@string/emptyTheBin" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
